--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Progate</title>
 </head>
 <body>
+	<p> Hello World </p>	
 
 </body>
 </html>
