--- a/index.html
+++ b/index.html
@@ -1,79 +1,34 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <title>Team i4 DTS</title>
+  </head>
+  <body>
+    <header>
+      <!-- Tulis code untuk header -->
+    
+    </header>
+    <div class="heading">
+      <!-- Tulis code untuk heading -->
+    </div>
+    <div class="our-portofolio">
+      <!-- Tulis code untuk our portofolio -->
+    </div>
+    <div class="out-team">
+      <!-- Tulis code untuk our team -->
+    </div>
+    <div class="cta">
+      <!-- Tulis code untuk cta -->
+    </div>
+    <footer>
+      <!-- Tulis code untuk footer -->
+    </footer>
 
-body {
-  margin: 0;
-  font-family: "Lucida Grande";
-}
-
-a {
-  text-decoration: none;
-}
-
-.container{
-	width: 1170px;
-	padding: 0 15px;
-  margin: 0 auto;
-}
-
-.top-wrapper{
-	padding: 180px 0 100px 0;
-  background-image: url(top.png);
-	background-size: cover;
-	color:white;
-  text-align: center;
-	
-}
-
-
-.top-wrapper h1 {
-  opacity: 0.7;
-  font-size: 45px;
-  letter-spacing: 5px;
-  margin-bottom: 10px;
-}
-
-.top-wrapper p {
-  opacity: 0.7;
-  margin-bottom: 3px;
-}
-
-
-
-.btn{
-	padding: 12px 24px 12px 24px;
-	color: white;
-	display: inline-block;
-	opacity: 0.8;
-  border-radius: 4px;
-}
-
-.btn:hover{
-  opacity: 1;
-}
-
-.signup{
-	background-color: #239b76;
-}
-
-.facebook{
-	background-color: #3b5998;
-	margin-right: 10px;
-}
-
-.twitter{
-	background-color: #55acee;
-}
-
-.btn-wrapper{
-	margin-top: 20px;
-	margin-bottom: 20px;
-}
-
-.btn-wrapper p{
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
-
-.fa{
-  margin-right: 5px;
-}
+  </body>
+</html>
