--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
   <body>
     <header>
       <!-- Tulis code untuk header -->
-    
+    <div class="navbar-kiri">
+        <img src="https://github.com/digitalkominfoi4/kelompoki4.github.com/blob/master/logo.png" alt="">
+      </div>
+      <div class="navbar-kanan">
+        <a href="#">Our portofolio</a>
+        <a href="#"><i class="fa fa-star"></i>Hire us!</a>
+      </div>
     </header>
     <div class="heading">
       <!-- Tulis code untuk heading -->
