--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="https://github.com/digitalkominfoi4/kelompoki4.github.com/blob/master/stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
