--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://github.com/digitalkominfoi4/kelompoki4.github.com/blob/master/stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Team i4 DTS</title>
@@ -13,7 +14,7 @@
     <header>
       <!-- Tulis code untuk header -->
     <div class="navbar-kiri">
-        <img src="https://github.com/digitalkominfoi4/kelompoki4.github.com/blob/master/logo.png" alt="">
+        <img src="https://raw.githubusercontent.com/digitalkominfoi4/kelompoki4.github.com/master/logo.png" alt="">
       </div>
       <div class="navbar-kanan">
         <a href="#">Our portofolio</a>
