--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://github.com/digitalkominfoi4/kelompoki4.github.com/blob/master/stylesheet.css">
+    <!--<link rel="stylesheet" href="https://github.com/digitalkominfoi4/kelompoki4.github.com/blob/master/stylesheet.css">-->
+    <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
