update footer + header

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
   <body>
     <header>
       <!-- Tulis code untuk header -->
-    <div class="navbar-kiri">
-        <img src="https://raw.githubusercontent.com/digitalkominfoi4/kelompoki4.github.com/master/logo.png" alt="">
-      </div>
-      <div class="navbar-kanan">
-        <a href="#">Our portofolio</a>
-        <a href="#"><i class="fa fa-star"></i>Hire us!</a>
+    <div class="container-header">
+        <div class="navbar-kiri">
+          <img src="logo.png" alt="">
+        </div>
+        <div class="navbar-kanan">
+          <a href="#">Our portofolio</a>
+          <a href="#"><i class="fa fa-star"></i>Hire us!</a>
+        </div>
       </div>
     </header>
     <div class="heading">
@@ -55,6 +57,18 @@
     </div>
     <footer>
       <!-- Tulis code untuk footer -->
+        <div class="container-footer">
+        <div class="footer-kiri">
+          <img src="logo footer.png" alt="">
+          <p>Created with love & passion</p>
+        </div>
+        <div class="footer-kanan">
+          <p>Follow us on</p>
+          <a href="#"><i class="fa fa-facebook-f"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-linkedin"></i></a>
+        </div>
+      </div>
     </footer>
 
   </body>
