--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <!-- Tulis code untuk our team -->
     </div>
     <div class="cta">
+	    <P>TEST</P>
       <!-- Tulis code untuk cta -->
 		<!--<div class="coba">
 		  <div class="container">
