--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="cta">
        Tulis code untuk cta -->
-		<!--<div class="coba">
+		<div class="coba">
 		  <div class="container">
 			<div class="cta-left">
 				<h3>Start Your Business<br>With <span>FourTeam<span></h3>
