--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     				<div class="divide-ctaleft">
     					<div class="cta-head">
     						<h5>Headquarters</h5>
-    						<p class="ctadd">Jl.Medan Merdeka Barat No.9 Kota Jakarta Pusat,<br>Daerah Khusus Ibukota Jakarta 10110</p>
+    						<p class="ctadd">Jl.Medan Merdeka Barat No.9, RT.2/RW.3,Gambir<br>Kecamatan Gambir,Kota Jakarta Pusat,<br>Daerah Khusus Ibukota Jakarta 10110</p>
     					</div>
     					<div class="cta-cont">
     						<h5>Contact Us on</h5>
