--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <div class="lesson-gambar2">
               <img src="Ellipse49.png">
               </div>
-              <h3>Suhadi</h3>
+              <h3>Sahadi</h3>
              <div class="messager suhadi"><p>UI/UX Designer</p></div>
           </div>          
         </div>
@@ -83,7 +83,7 @@
               <div class="lesson-gambar6">
               <img src="Ellipse49.png">
               </div>
-              <h3>Suciono</h3>
+              <h3>Suciyono</h3>
               <div class="messager suciono"><p>Back-end Developer</p></div>
           </div>          
         </div>
